<resources>
    <string name="app_name">BMX Spots</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>

    <string name="vk_app_id" translatable="false">4964885</string>

    <string name="vk_btn_text">With Vkontakte</string>
    <string name="gp_btn_text">With Google+</string>

    <string name="main_string">Main</string>
    <string name="my_string">My spotsFavorite</string>
    <string name="favorite_string">Favorite spotsFavorite</string>
    <string name="information_string">Information</string>
    <string name="logout_string">Logout</string>

    <string name="closeDrawer" translatable="false">Navigation View</string>
    <string name="openDrawer" translatable="false">Navigation View Closed</string>

    <string name="tab_map">Map</string>
    <string name="tab_surrounding">Surrounding</string>

    <string name="spot_title">Title</string>
    <string name="spot_description">Description</string>
    <string name="spot_address">Address</string>
    <string name="dialog_spot_add_title">Add spot</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="refresh_title">Refresh</string>
</resources>
