<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coord"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/authBackground"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/auth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="@dimen/text_auth" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/vk"
                style="@style/SocialButton"
                android:background="@drawable/vk_social_button"
                android:drawableStart="@drawable/vk"
                android:text="@string/vk_btn_text" />

            <Button
                android:id="@+id/gp"
                style="@style/SocialButton"
                android:background="@drawable/gp_social_button"
                android:drawableStart="@drawable/gp"
                android:text="@string/gp_btn_text" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"/>

    </LinearLayout>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>